fix topmenu margin-right on tablet size

--- a/UploadedFiles/Css/General/template.css
+++ b/UploadedFiles/Css/General/template.css
@@ -435,7 +435,7 @@ ul.associates li {
     }
 
     .topmenu li.main {
-        margin-right:3px;
+        margin-right:2px;
         padding: 5px 0px;
         font-size:11px;
     }
